# prod

./: Dockerfile  REPORT.md  docker-compose.yaml  pyproject.toml
mysite/mysite/: settings.py
