[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.6.0"
django = "4.2"
django-debug-toolbar = "4.0.0"
django-filter = "22.1"
djangorestframework = "3.14.0"
pillow = "9.4.0"
pytz = "2022.7.1"
sqlparse = "0.4.2"
gunicorn = "20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
